2008-04-09  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-52.5): Removed '-size -1' from test, does not
	seem to have any bearing, and was an illegal value. Test case is
	not affected by the value of -size, test flag restoration and that
	everything was properly copied.

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Added checking of -size
	* tests/ioCmd.test (iocmd-15.{13,14}): value to reject negative
	values, and values overflowing 32-bit signed. [Bug 1557855]. Basic
	patch by Alexandre Ferrieux <ferrieux@users.sourceforge.net>, with
	modifications from me to separate overflow from true negative
	value. Extended testsuite.

2008-04-08  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.8,53.9,53.10): Backported das' fix of typo
	  and quoting for spaces in builddir path.
	
2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* generic/tclIO.c: Additional changes to data structures for fcopy
	* generic/tclIO.h: and channels to perform proper cleanup in case
	  of a channel having two background copy operations running as is
	  now possible.

	* generic/tclIO.c (BUSY_STATE, CheckChannelErrors,
	  TclCopyChannel): New macro, and the places using it. This change
	  allows for bi-directional fcopy on channels. [Bug 1350564].
	  Thanks to Alexandre Ferrieux <ferrieux@users.sourceforge.net>
	  for the patch.

	* tests/io.test (io-53.9): Made test cleanup robust against the
	  possibility of slow process shutdown on Windows. Backported from
	  Kevin Kenny's change to the same test on the 8.5 and head
	  branches.

2008-04-04  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.9): Added testcase for [Bug 780533], based
	  on Alexandre's test script. Also fixed problem with timer in
	  preceding test, was not canceled properly in the ok case.

2008-04-03  Andreas Kupries  <andreask@activestate.com>
